--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,38 @@
 .top-bar-left .top-bar-left-items ul > li > a:hover{
 	color:#fa4c23;
 }
+.main-header{
+	transition:all ease-in-out .3s;
+}
+.stickyNavbar{
+    top: 0;
+    left: 0;
+    right: 0;
+    position: fixed !important;
+    margin: 0;
+    animation: fadeItIn 1s;
+    z-index: 1000;
+    padding: 5px 0 !important;
+    min-height: 70px !important;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    margin-top: 0 !important;
+    background-color: #fff !important;
+}
 
+@keyframes fadeItIn {
+	from {
+		opacity: 0;
+		-webkit-transform: translate3d(0, -100%, 0);
+		-moz-transform: translate3d(0, -100%, 0);
+		transform: translate3d(0, -100%, 0);
+	}
+	to {
+		opacity: 1;
+		-webkit-transform: none;
+		-moz-transform: none;
+		transform: none;
+	}
+}
 .navbar-light .navbar-nav .nav-link{
 	background: transparent;
 	font-family:"Roboto", sans-serif;
@@ -422,6 +453,71 @@
 
 
 
+/* About Us Section */
+
+.inner-banner-section{
+	width:100%;
+	height:350px;
+	background:#ed4b38; /* url('/img/slider-oil-a.jpg'); */
+	object-fit: cover;
+	background-repeat: no-repeat;
+	background-position:center;
+}
+
+.bg-title{
+	color:#000000;
+	line-height: 2.25;
+	font-size:2.5rem;
+	font-family: "Roboto", sans-serif;
+	font-weight:600;
+	margin:0 0 18px;
+}
+.about-text{
+	color:#585a5e;
+	font-size:16px;
+	line-height: 1.7;
+	font-family: "Roboto", sans-serif;
+
+}
+.core-details{
+	padding-top: 36px;
+}
+.about-subtitle{
+	font-family: "Roboto", sans-serif;
+	font-size:1.5rem;
+	font-weight:600;
+	line-height: 1.3;
+	color:#000000;
+}
+.list-group-item a{
+	font-weight:normal;
+	font-size: 0.875em;
+	text-decoration: none;
+	transition: ease-out .3s;
+	color:#ed4b38;
+}
+.list-group-item a:hover{
+	color:#f7e73a;
+}
+.card-header{
+	color:#000000;
+	font-weight:600;
+	text-transform: uppercase;
+	font-family: 'Roboto', sans-serif;
+	transition:color .4s;
+
+}
+
+
+/* Service */
+
+.service-banner{
+	background:darkcyan !important;
+}
+
+
+
+
 /* 
- $primary-color-yellow = #f7e73a;
- $primary-color-red = #fa4c23; */
+ $primary-color-yellow:#f7e73a;
+ $primary-color-red:#fa4c23; */
