--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,11 @@
 	border:none;
 	outline: none;
 }
+a{
+	outline: none;
+	text-decoration:none;
 
+}
 
 
 .top-bar-header{
@@ -87,11 +91,90 @@
     margin-top: 1px;
 }
 .banner-section{
-	background:url('../img/refinery.jpg');
 	width:100%;
 	height: 80vh;
 	background-size:cover;
 	background-position:center;
+}
+#minimal-bootstrap-carousel .carousel-inner .item {
+    min-height: 400px;
+    height: 80vh;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+	background-color: #181818;
+}
+#minimal-bootstrap-carousel .carousel-caption {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    padding: 0;
+    text-align: right;
+    text-shadow: none;
+}
+#minimal-bootstrap-carousel .carousel-caption .container {
+    display: table;
+    width: 100%;
+    height: 100%;
+    max-width: 1170px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+#minimal-bootstrap-carousel .carousel-caption .container .box.valign-middle {
+    vertical-align: middle;
+}
+#minimal-bootstrap-carousel .carousel-caption .container .box{
+	display: table-cell;
+	text-align:left;
+}
+#minimal-bootstrap-carousel .carousel-caption .container .box.valign-middle .content{
+	display:block;
+}
+.main-banner-content{
+	padding-left:10px;
+}
+.head-title{
+	display: block;
+    font-size: 24px;
+    line-height: 1.2em;
+    color: #181818;
+    font-weight: 400;
+    margin: 0;
+}
+.main-banner-content h1{
+	font-size: 100px;
+    color: #181818;
+    font-weight: 400;
+    line-height: 1.1em;
+    letter-spacing: 0px;
+    margin: 0;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+.main-banner-content .text{
+	font-size: 18px;
+    line-height: 30px;
+    color: #181818;
+    font-weight: 600;
+    margin: 0;
+    margin-bottom: 36px;
+}
+@media (max-width: 375px){
+	.main-banner-content h1 {
+		font-size: 58px;
+	}
+}
+@media (max-width: 768px){
+	.main-banner-content h1 {
+		font-size: 74px;
+	}
+}
+.main-body{
+	padding:150px 0 0px !important;
 }
 .padding-top{
 	padding-top:80px;
@@ -513,6 +596,44 @@
 
 .service-banner{
 	background:darkcyan !important;
+}
+.theme-btn{
+	margin-right:20px;
+}
+.btn-style-one{
+	position: relative;
+    font-size: 16px;
+    line-height: 25px;
+    color: #fff;
+    padding: 15px 50px;
+    font-weight: 700;
+    background: #fa4c23;
+    border-radius: 3px;
+    text-transform: capitalize;
+}
+.btn-style-two{
+	position: relative;
+    font-size: 16px;
+    line-height: 25px;
+    color: #fa4c23;
+    padding: 15px 50px;
+    font-weight: 700;
+    background: transparent;
+	border-radius: 3px;
+	border:1px solid #fa4c23;
+    text-transform: capitalize;
+}
+.main-banner-content > a{
+	text-decoration:none;
+}
+.main-banner-content .btn-style-one:hover{
+	color:#fa4c23;
+	background:#fff;
+}
+.main-banner-content .btn-style-two:hover{
+	color:#fa4c23;
+	background:#fff;
+	border:none;
 }
 
 
